# toCHDConvertor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  app icon lic.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
